fixing stupid spacing mistake

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 .axis path,
 .axis line {
   fill: none;
-  stroke: black;
+  stroke: #000;
   shape-rendering: crispEdges;
 }
 
